--- a/arch/arm64/configs/sd_defconfig
+++ b/arch/arm64/configs/sd_defconfig
@@ -40,7 +40,7 @@ CONFIG_LOCALVERSION="-SkyDragon"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
-CONFIG_SYSVIPC_SYSCTL=y
+# CONFIG_SYSVIPC is not set
 # CONFIG_POSIX_MQUEUE is not set
 # CONFIG_FHANDLE is not set
 CONFIG_AUDIT=y
@@ -89,7 +89,7 @@ CONFIG_RCU_FANOUT=64
 CONFIG_RCU_FANOUT_LEAF=16
 # CONFIG_RCU_FANOUT_EXACT is not set
 CONFIG_RCU_FAST_NO_HZ=y
-CONFIG_TREE_RCU_TRACE=y
+# CONFIG_TREE_RCU_TRACE is not set
 # CONFIG_RCU_BOOST is not set
 # CONFIG_RCU_NOCB_CPU is not set
 # CONFIG_IKCONFIG is not set
@@ -304,7 +304,12 @@ CONFIG_HOTPLUG_CPU=y
 CONFIG_PREEMPT=y
 CONFIG_PREEMPT_COUNT=y
 CONFIG_SWP_EMULATE=y
-CONFIG_HZ=300
+# CONFIG_HZ_100 is not set
+CONFIG_HZ_250=y
+# CONFIG_HZ_300 is not set
+# CONFIG_HZ_1000 is not set
+CONFIG_HZ=250
+CONFIG_SCHED_HRTICK=y
 CONFIG_ARCH_HAS_HOLES_MEMORYMODEL=y
 CONFIG_ARCH_SPARSEMEM_ENABLE=y
 CONFIG_ARCH_SPARSEMEM_DEFAULT=y
@@ -373,7 +378,6 @@ CONFIG_BINFMT_SCRIPT=y
 # CONFIG_BINFMT_MISC is not set
 # CONFIG_COREDUMP is not set
 CONFIG_COMPAT=y
-CONFIG_SYSVIPC_COMPAT=y
 
 #
 # Power management options
@@ -831,6 +835,7 @@ CONFIG_NET_SCH_FIFO=y
 # CONFIG_NETLINK_DIAG is not set
 CONFIG_RMNET_DATA=y
 CONFIG_RMNET_DATA_FC=y
+# CONFIG_RMNET_DATA_DEBUG_PKT is not set
 CONFIG_RPS=y
 CONFIG_RFS_ACCEL=y
 CONFIG_XPS=y
@@ -2467,6 +2472,7 @@ CONFIG_HID_CYPRESS=y
 # CONFIG_HID_EMS_FF is not set
 CONFIG_HID_ELECOM=y
 CONFIG_HID_EZKEY=y
+# CONFIG_HID_FIIO is not set
 CONFIG_HID_HOLTEK=y
 CONFIG_HOLTEK_FF=y
 CONFIG_HID_KEYTOUCH=y
@@ -3082,7 +3088,6 @@ CONFIG_MSM_AVTIMER=y
 CONFIG_PFT=y
 # CONFIG_MSM_SPSS is not set
 CONFIG_MSM_BUS_SCALING=y
-CONFIG_MSM_BUSPM_DEV=y
 CONFIG_BUS_TOPOLOGY_ADHOC=y
 CONFIG_DEBUG_BUS_VOTER=y
 # CONFIG_I2C_MSM_PROF_DBG is not set
@@ -3409,6 +3414,7 @@ CONFIG_MAGIC_SYSRQ=y
 # CONFIG_STRIP_ASM_SYMS is not set
 # CONFIG_READABLE_ASM is not set
 # CONFIG_UNUSED_SYMBOLS is not set
+# CONFIG_PAGE_OWNER is not set
 CONFIG_DEBUG_FS=y
 # CONFIG_HEADERS_CHECK is not set
 # CONFIG_DEBUG_SECTION_MISMATCH is not set
@@ -3465,6 +3471,8 @@ CONFIG_FRAME_POINTER=y
 # CONFIG_RCU_TORTURE_TEST is not set
 CONFIG_RCU_CPU_STALL_TIMEOUT=21
 CONFIG_RCU_CPU_STALL_VERBOSE=y
+# CONFIG_RCU_CPU_STALL_INFO is not set
+# CONFIG_RCU_TRACE is not set
 # CONFIG_BACKTRACE_SELF_TEST is not set
 # CONFIG_DEBUG_BLOCK_EXT_DEVT is not set
 # CONFIG_DEBUG_FORCE_WEAK_PER_CPU is not set
