--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -44,11 +44,12 @@ config ARM64
 	select HAVE_DMA_API_DEBUG
 	select HAVE_DMA_ATTRS
 	select HAVE_DMA_CONTIGUOUS
-	select HAVE_DYNAMIC_FTRACE
+	#select HAVE_DYNAMIC_FTRACE
 	select HAVE_EFFICIENT_UNALIGNED_ACCESS
-	select HAVE_FTRACE_MCOUNT_RECORD
-	select HAVE_FUNCTION_TRACER
-	select HAVE_FUNCTION_GRAPH_TRACER
+        select DCACHE_WORD_ACCESS
+	#select HAVE_FTRACE_MCOUNT_RECORD
+	#select HAVE_FUNCTION_TRACER
+	#select HAVE_FUNCTION_GRAPH_TRACER
 	select HAVE_GENERIC_DMA_COHERENT
 	select HAVE_IRQ_TIME_ACCOUNTING
 	select HAVE_MEMBLOCK
