--- a/arch/arm64/configs/sd2_defconfig
+++ b/arch/arm64/configs/sd2_defconfig
@@ -366,16 +366,16 @@ CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_TRANSPARENT_HUGEPAGE_ALWAYS is not set
 # CONFIG_TRANSPARENT_HUGEPAGE_MADVISE is not set
 CONFIG_CROSS_MEMORY_ATTACH=y
-CONFIG_CLEANCACHE=y
-CONFIG_FRONTSWAP=y
+# CONFIG_CLEANCACHE is not set
+# CONFIG_FRONTSWAP is not set
 # CONFIG_USE_USER_ACCESSIBLE_TIMERS is not set
-CONFIG_ZBUD=y
-CONFIG_ZSWAP=y
+# CONFIG_ZBUD is not set
+# CONFIG_ZSWAP is not set
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 CONFIG_GENERIC_EARLY_IOREMAP=y
 CONFIG_KSWAPD_CPU_AFFINITY_MASK=""
 CONFIG_ZSMALLOC=y
-CONFIG_PGTABLE_MAPPING=y
+# CONFIG_PGTABLE_MAPPING is not set
 CONFIG_SECCOMP=y
 # CONFIG_XEN is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
@@ -3692,7 +3692,7 @@ CONFIG_NLS_UTF8=y
 # Kernel hacking
 #
 CONFIG_PRINTK_TIME=y
-CONFIG_DEFAULT_MESSAGE_LOGLEVEL=7
+CONFIG_DEFAULT_MESSAGE_LOGLEVEL=1
 CONFIG_ENABLE_WARN_DEPRECATED=y
 CONFIG_ENABLE_MUST_CHECK=y
 CONFIG_FRAME_WARN=2048
