--- a/arch/arm64/configs/sddnd_defconfig
+++ b/arch/arm64/configs/sddnd_defconfig
@@ -7,6 +7,10 @@ CONFIG_64BIT=y
 CONFIG_ARCH_PHYS_ADDR_T_64BIT=y
 CONFIG_MMU=y
 CONFIG_NO_IOPORT_MAP=y
+CONFIG_ARCH_MMAP_RND_BITS_MIN=18
+CONFIG_ARCH_MMAP_RND_BITS_MAX=24
+CONFIG_ARCH_MMAP_RND_COMPAT_BITS_MIN=11
+CONFIG_ARCH_MMAP_RND_COMPAT_BITS_MAX=16
 CONFIG_ILLEGAL_POINTER_VALUE=0xdead000000000000
 CONFIG_STACKTRACE_SUPPORT=y
 CONFIG_LOCKDEP_SUPPORT=y
@@ -104,6 +108,7 @@ CONFIG_CGROUPS=y
 CONFIG_CGROUP_FREEZER=y
 # CONFIG_CGROUP_DEVICE is not set
 CONFIG_CPUSETS=y
+# CONFIG_TASK_CPUFREQ_STATS is not set
 CONFIG_PROC_PID_CPUSET=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_RESOURCE_COUNTERS=y
@@ -182,6 +187,7 @@ CONFIG_HAVE_DMA_CONTIGUOUS=y
 CONFIG_GENERIC_SMP_IDLE_THREAD=y
 CONFIG_HAVE_CLK=y
 CONFIG_HAVE_DMA_API_DEBUG=y
+
 CONFIG_HAVE_PERF_REGS=y
 CONFIG_HAVE_PERF_USER_STACK_DUMP=y
 CONFIG_HAVE_ARCH_JUMP_LABEL=y
@@ -196,6 +202,10 @@ CONFIG_CC_STACKPROTECTOR_STRONG=y
 CONFIG_HAVE_IRQ_TIME_ACCOUNTING=y
 CONFIG_HAVE_ARCH_TRANSPARENT_HUGEPAGE=y
 CONFIG_MODULES_USE_ELF_RELA=y
+CONFIG_HAVE_ARCH_MMAP_RND_BITS=y
+CONFIG_ARCH_MMAP_RND_BITS=24
+CONFIG_HAVE_ARCH_MMAP_RND_COMPAT_BITS=y
+CONFIG_ARCH_MMAP_RND_COMPAT_BITS=16
 CONFIG_CLONE_BACKWARDS=y
 CONFIG_OLD_SIGSUSPEND3=y
 CONFIG_COMPAT_OLD_SIGACTION=y
@@ -207,6 +217,7 @@ CONFIG_COMPAT_OLD_SIGACTION=y
 CONFIG_HAVE_GENERIC_DMA_COHERENT=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
+CONFIG_SYSTEM_TRUSTED_KEYRING=y
 # CONFIG_MODULES is not set
 # CONFIG_MODULE_SIG_SHA1 is not set
 # CONFIG_MODULE_SIG_SHA224 is not set
@@ -245,7 +256,7 @@ CONFIG_BLOCK_COMPAT=y
 #
 # IO Schedulers
 #
-CONFIG_IOSCHED_NOOP=y
+# CONFIG_IOSCHED_NOOP is not set
 # CONFIG_IOSCHED_TEST is not set
 # CONFIG_IOSCHED_DEADLINE is not set
 # CONFIG_IOSCHED_ROW is not set
@@ -509,6 +520,7 @@ CONFIG_INET_XFRM_MODE_TUNNEL=y
 CONFIG_INET_DIAG=y
 CONFIG_INET_TCP_DIAG=y
 # CONFIG_INET_UDP_DIAG is not set
+CONFIG_INET_DIAG_DESTROY=y
 CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_CONG_BIC=y
 CONFIG_TCP_CONG_CUBIC=y
@@ -1085,6 +1097,7 @@ CONFIG_QSEECOM=y
 # CONFIG_QPNP_MISC is not set
 CONFIG_TI_DRV2667=y
 # CONFIG_QCOM_LIQUID_DOCK is not set
+
 CONFIG_WIFI_SAR=y
 # CONFIG_C2PORT is not set
 
@@ -1173,6 +1186,8 @@ CONFIG_DM_REQ_CRYPT=y
 # CONFIG_DM_UEVENT is not set
 # CONFIG_DM_FLAKEY is not set
 CONFIG_DM_VERITY=y
+CONFIG_DM_VERITY_FEC=y
+CONFIG_DM_ANDROID_VERITY=y
 # CONFIG_TARGET_CORE is not set
 # CONFIG_FUSION is not set
 
@@ -1703,7 +1718,7 @@ CONFIG_SPI_MASTER=y
 #
 # CONFIG_SPI_ALTERA is not set
 # CONFIG_SPI_BITBANG is not set
-CONFIG_SPI_CONTEXTHUB=y
+# CONFIG_SPI_CONTEXTHUB is not set
 # CONFIG_SPI_GPIO is not set
 # CONFIG_SPI_FSL_SPI is not set
 # CONFIG_SPI_OC_TINY is not set
@@ -2237,6 +2252,7 @@ CONFIG_TSPP=y
 # Media ancillary drivers (tuners, sensors, i2c, frontends)
 #
 CONFIG_MEDIA_SUBDRV_AUTOSELECT=y
+CONFIG_MEDIA_ATTACH=y
 
 #
 # Audio decoders, processors and mixers
@@ -2476,10 +2492,6 @@ CONFIG_SND_SOC_MSM_QDSP6V2_INTF=y
 # CONFIG_SND_SOC_QDSP6 is not set
 CONFIG_SND_SOC_QDSP6V2=y
 # CONFIG_AUDIO_OCMEM is not set
-# CONFIG_DOLBY_DAP is not set
-CONFIG_DTS_EAGLE=y
-CONFIG_DOLBY_DS2=y
-CONFIG_DTS_SRS_TM=y
 CONFIG_QTI_PP=y
 CONFIG_SND_SOC_CPE=y
 CONFIG_SND_SOC_MSM8994=y
@@ -2868,6 +2880,7 @@ CONFIG_MMC_BLOCK_BOUNCE=y
 # CONFIG_SDIO_UART is not set
 CONFIG_MMC_TEST=y
 
+
 #
 # MMC/SD/SDIO Host Controller Drivers
 #
@@ -3220,6 +3233,8 @@ CONFIG_ION_MSM=y
 # CONFIG_NET_VENDOR_SILICOM is not set
 # CONFIG_CED1401 is not set
 # CONFIG_DGRP is not set
+CONFIG_NANOHUB=y
+CONFIG_NANOHUB_SPI=y
 # CONFIG_ZCACHE is not set
 
 #
@@ -3243,7 +3258,6 @@ CONFIG_MSM_AVTIMER=y
 # CONFIG_SSM is not set
 # CONFIG_MSM_MHI is not set
 # CONFIG_QCA1530 is not set
-CONFIG_PFT=y
 # CONFIG_MSM_SPSS is not set
 CONFIG_MSM_BUS_SCALING=y
 CONFIG_BUS_TOPOLOGY_ADHOC=y
@@ -3493,7 +3507,7 @@ CONFIG_MSM_SHARED_HEAP_ACCESS=y
 CONFIG_MSM_SYSTEM_HEALTH_MONITOR=y
 CONFIG_QCOM_EARLY_RANDOM=y
 # CONFIG_MSM_PACMAN is not set
-# CONFIG_MSM_CORE_CTL_HELPER is not set
+CONFIG_MSM_CORE_CTL_HELPER=y
 CONFIG_MSM_PERFORMANCE=y
 CONFIG_QCOM_NPA_DUMP=y
 # CONFIG_KERNEL_TEXT_MPU_PROT is not set
@@ -3585,6 +3599,7 @@ CONFIG_MISC_FILESYSTEMS=y
 # CONFIG_ADFS_FS is not set
 # CONFIG_AFFS_FS is not set
 # CONFIG_ECRYPT_FS is not set
+CONFIG_SDCARD_FS=y
 # CONFIG_HFS_FS is not set
 # CONFIG_HFSPLUS_FS is not set
 # CONFIG_BEFS_FS is not set
@@ -3673,7 +3688,7 @@ CONFIG_NLS_UTF8=y
 # Kernel hacking
 #
 CONFIG_PRINTK_TIME=y
-CONFIG_DEFAULT_MESSAGE_LOGLEVEL=7
+CONFIG_DEFAULT_MESSAGE_LOGLEVEL=1
 CONFIG_ENABLE_WARN_DEPRECATED=y
 CONFIG_ENABLE_MUST_CHECK=y
 CONFIG_FRAME_WARN=2048
@@ -3693,6 +3708,7 @@ CONFIG_PANIC_ON_OOPS_VALUE=0
 # CONFIG_PANIC_ON_RECURSIVE_FAULT is not set
 # CONFIG_DETECT_HUNG_TASK is not set
 # CONFIG_SCHED_DEBUG is not set
+# CONFIG_SYSRQ_SCHED_DEBUG is not set
 # CONFIG_PANIC_ON_RT_THROTTLING is not set
 # CONFIG_SCHEDSTATS is not set
 CONFIG_TIMER_STATS=y
@@ -3773,6 +3789,8 @@ CONFIG_BLK_DEV_IO_TRACE=y
 # CONFIG_FTRACE_STARTUP_TEST is not set
 # CONFIG_RING_BUFFER_BENCHMARK is not set
 # CONFIG_RING_BUFFER_STARTUP_TEST is not set
+# CONFIG_RBTREE_TEST is not set
+# CONFIG_INTERVAL_TREE_TEST is not set
 # CONFIG_DYNAMIC_DEBUG is not set
 # CONFIG_OOPS_LOG_BUFFER is not set
 # CONFIG_LOG_BUF_MAGIC is not set
@@ -3788,6 +3806,7 @@ CONFIG_HAVE_ARCH_KGDB=y
 CONFIG_ARM64_PTDUMP=y
 # CONFIG_EARLY_PRINTK is not set
 CONFIG_PID_IN_CONTEXTIDR=y
+# CONFIG_DEBUG_SET_MODULE_RONX is not set
 # CONFIG_FORCE_PAGES is not set
 # CONFIG_FREE_PAGES_RDONLY is not set
 
@@ -3851,6 +3870,7 @@ CONFIG_CRYPTO_NULL=y
 CONFIG_CRYPTO_WORKQUEUE=y
 CONFIG_CRYPTO_CRYPTD=y
 CONFIG_CRYPTO_AUTHENC=y
+# CONFIG_CRYPTO_TEST is not set
 CONFIG_CRYPTO_ABLK_HELPER=y
 
 #
@@ -3980,6 +4000,8 @@ CONFIG_ZLIB_INFLATE=y
 CONFIG_ZLIB_DEFLATE=y
 CONFIG_LZO_COMPRESS=y
 CONFIG_LZO_DECOMPRESS=y
+CONFIG_LZ4_COMPRESS=y
+CONFIG_LZ4_DECOMPRESS=y
 # CONFIG_XZ_DEC is not set
 # CONFIG_XZ_DEC_BCJ is not set
 CONFIG_DECOMPRESS_GZIP=y
@@ -4007,3 +4029,4 @@ CONFIG_OID_REGISTRY=y
 CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
 CONFIG_STRICT_MEMORY_RWX=y
+
