--- a/arch/arm/boot/dts/qcom/msm8994-liquid.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8994-liquid.dtsi
@@ -50,27 +50,24 @@
 	qcom,mdss-pref-prim-intf = "dsi";
 };
 
-#include "dsi-panel-jdi-4k-dualmipi0-video.dtsi"
-#include "dsi-panel-jdi-4k-dualmipi1-video.dtsi"
-
-&dsi_dual_jdi_4k_video_0 {
+&dsi_dual_jdi_4k_video {
 	qcom,mdss-dsi-bl-pmic-control-type = "bl_ctrl_pwm";
 	qcom,mdss-dsi-bl-pmic-pwm-frequency = <50>;
 	qcom,mdss-dsi-bl-pmic-bank-select = <3>;
 	qcom,mdss-dsi-pwm-gpio = <&pmi8994_mpps 1 0>;
-	qcom,cont-splash-enabled;
-};
-
-&dsi_dual_jdi_4k_video_1 {
-	qcom,cont-splash-enabled;
+	qcom,panel-supply-entries = <&dsi_panel_pwr_supply>;
 };
 
 &mdss_fb0 {
 	qcom,boot-indication-enabled;
 };
 
+&mdss_dsi {
+	hw-config = "split_dsi";
+};
+
 &mdss_dsi0 {
-	qcom,dsi-pref-prim-pan = <&dsi_dual_jdi_4k_video_0>;
+	qcom,dsi-pref-prim-pan = <&dsi_dual_jdi_4k_video>;
 	pinctrl-names = "mdss_default", "mdss_sleep";
 	pinctrl-0 = <&mdss_dsi_active>;
 	pinctrl-1 = <&mdss_dsi_suspend>;
@@ -80,12 +77,11 @@
 	qcom,platform-reset-gpio = <&msm_gpio 78 0>;
 	qcom,platform-bklight-en-gpio = <&pmi8994_gpios 2 0>;
 
-	qcom,dsi-panel-bias-vreg;
 	qcom,regulator-ldo-mode;
 };
 
 &mdss_dsi1 {
-	qcom,dsi-pref-prim-pan = <&dsi_dual_jdi_4k_video_1>;
+	qcom,dsi-pref-prim-pan = <&dsi_dual_jdi_4k_video>;
 
 	vddio-supply = <&pm8994_s4>;
 	qcom,regulator-ldo-mode;
@@ -170,8 +166,8 @@
 	cd-gpios = <&pm8994_gpios 8 0x1>;
 
 	pinctrl-names = "active", "sleep";
-	pinctrl-0 = <&sdc2_clk_on &sdc2_cmd_on &sdc2_data_on>;
-	pinctrl-1 = <&sdc2_clk_off &sdc2_cmd_off &sdc2_data_off>;
+	pinctrl-0 = <&sdc2_clk_on &sdc2_cmd_on &sdc2_data_on &sdc2_cd_on>;
+	pinctrl-1 = <&sdc2_clk_off &sdc2_cmd_off &sdc2_data_off &sdc2_cd_off>;
 
 	qcom,clk-rates = <400000 20000000 25000000 50000000 100000000 200000000>;
 	qcom,bus-speed-mode = "SDR12", "SDR25", "SDR50", "DDR50", "SDR104";
@@ -539,9 +535,17 @@
 	qcom,use-otp-profile;
 };
 
+&usb_otg_switch {
+	status = "disabled";
+};
+
 &pmi8994_charger {
+	/delete-property/ otg-parent-supply;
 	qcom,dc-psy-type = "Wipower";
 	qcom,charge-unknown-battery;
+	smbcharger_charger_otg {
+		parent-supply = <&pmi8994_boost_5v>;
+	};
 };
 
 &slim_msm {
@@ -870,6 +874,7 @@
 };
 
 &spi_epm {
+	status = "ok";
 	epm-adc@1 {
 		compatible = "cy,epm-adc-cy8c5568lti-114";
 		reg = <1>;
