--- a/arch/arm/boot/dts/qcom/msm8994-mdss-pll.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8994-mdss-pll.dtsi
@@ -19,12 +19,12 @@
 
 		reg = <0xfd998300 0x500>,
 		      <0xfd8c2300 0x8>,
-		      <0xfd998200 0x64>,
-		      <0xfd9a0300 0x500>;
-		reg-names = "pll_base", "gdsc_base", "dynamic_pll_base",
-			"pll_1_base";
+		      <0xfd998200 0x64>;
+		reg-names = "pll_base", "gdsc_base", "dynamic_pll_base";
 
 		gdsc-supply = <&gdsc_mdss>;
+		vddio-supply = <&pm8994_l12>;
+		vcca-supply = <&pm8994_l28>;
 		qcom,mdss-en-pll-90-phase;
 		clocks = <&clock_mmss clk_mdss_ahb_clk>;
 		clock-names = "iface_clk";
@@ -45,6 +45,24 @@
 				qcom,supply-enable-load = <0>;
 				qcom,supply-disable-load = <0>;
 			};
+
+			qcom,platform-supply-entry@1 {
+				reg = <1>;
+				qcom,supply-name = "vddio";
+				qcom,supply-min-voltage = <1800000>;
+				qcom,supply-max-voltage = <1800000>;
+				qcom,supply-enable-load = <100000>;
+				qcom,supply-disable-load = <100>;
+			};
+
+			qcom,platform-supply-entry@2 {
+				reg = <2>;
+				qcom,supply-name = "vcca";
+				qcom,supply-min-voltage = <1000000>;
+				qcom,supply-max-voltage = <1000000>;
+				qcom,supply-enable-load = <10000>;
+				qcom,supply-disable-load = <100>;
+			};
 		};
 	};
 	mdss_dsi1_pll: qcom,mdss_dsi_pll@fd9a0300 {
@@ -58,6 +76,10 @@
 		reg-names = "pll_base", "gdsc_base";
 
 		gdsc-supply = <&gdsc_mdss>;
+		vddio-supply = <&pm8994_l12>;
+		vcca-supply = <&pm8994_l28>;
+
+		qcom,mdss-en-pll-90-phase;
 		clocks = <&clock_mmss clk_mdss_ahb_clk>;
 		clock-names = "iface_clk";
 		clock-rate = <0>;
@@ -73,6 +95,24 @@
 				qcom,supply-max-voltage = <0>;
 				qcom,supply-enable-load = <0>;
 				qcom,supply-disable-load = <0>;
+			};
+
+			qcom,platform-supply-entry@1 {
+				reg = <1>;
+				qcom,supply-name = "vddio";
+				qcom,supply-min-voltage = <1800000>;
+				qcom,supply-max-voltage = <1800000>;
+				qcom,supply-enable-load = <100000>;
+				qcom,supply-disable-load = <100>;
+			};
+
+			qcom,platform-supply-entry@2 {
+				reg = <2>;
+				qcom,supply-name = "vcca";
+				qcom,supply-min-voltage = <1000000>;
+				qcom,supply-max-voltage = <1000000>;
+				qcom,supply-enable-load = <10000>;
+				qcom,supply-disable-load = <100>;
 			};
 		};
 	};
