--- a/arch/arm/boot/dts/qcom/msm8994-pinctrl.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8994-pinctrl.dtsi
@@ -210,58 +210,6 @@
 		        };
 		};
 
-		spi5_active1 {
-			/* MOSI, MISO */
-			qcom,pins = <&gp 21>, <&gp 22>;
-			qcom,num-grp-pins = <2>;
-			qcom,pin-func = <2>;
-			label = "spi5-active";
-
-			spi5_active1: spi_active {
-			       drive-strength = <12>;
-			       bias-disable = <0>;
-		        };
-		};
-
-		spi5_suspend1 {
-			/* MOSI, MISO */
-			qcom,pins = <&gp 21>, <&gp 22>;
-			qcom,num-grp-pins = <2>;
-			qcom,pin-func = <2>;
-			label = "spi5-suspend";
-
-			spi5_sleep1: spi_sleep {
-				drive-strength = <2>;
-				bias-pull-down;
-			};
-		};
-
-		spi5_active2 {
-			/* CLK */
-			qcom,pins = <&gp 24>;
-			qcom,num-grp-pins = <1>;
-			qcom,pin-func = <3>;
-			label = "spi5-active2";
-
-			spi5_active2: spi_active {
-				drive-strength = <12>;
-				bias-disable = <0>;
-		        };
-		};
-
-		spi5_suspend2 {
-			/* CLK */
-			qcom,pins = <&gp 24>;
-			qcom,num-grp-pins = <1>;
-			qcom,pin-func = <3>;
-			label = "spi5-suspend2";
-
-			spi5_sleep2: spi_sleep {
-				drive-strength = <2>;
-				bias-pull-down;
-			};
-		};
-
 		pmx_i2c_1 {
 			qcom,pins = <&gp 2>, <&gp 3>; /* SDA, SCL */
 			qcom,num-grp-pins = <2>;
@@ -289,6 +237,21 @@
 			audio_ext_speakers: audio_ext_speakers {
 				drive-strength = <2>;
 				bias-pull-up;
+			};
+		};
+
+		sdhc2_cd_pin {
+			qcom,pins = <&gp 38>;
+			qcom,num-grp-pins = <1>;
+			qcom,pin-func = <0>;
+			label = "cd-gpio";
+			sdc2_cd_on: cd_on {
+				drive-strength = <2>;
+				bias-pull-up;
+			};
+			sdc2_cd_off: cd_off {
+				drive-strength = <2>;
+				bias-disable;
 			};
 		};
 
@@ -459,23 +422,6 @@
 			};
 
 			i2c_2_sleep: i2c_2_sleep {
-				drive-strength = <2>;
-				bias-disable;
-			};
-		};
-
-		pmx_i2c_3 {
-			qcom,pins = <&gp 43>, <&gp 44>; /* SDA, SCL */
-			qcom,num-grp-pins = <2>;
-			qcom,pin-func = <3>;
-			label = "pmx_i2c_3";
-
-			i2c_3_active: i2c_3_active {
-				drive-strength = <2>;
-				bias-disable;
-			};
-
-			i2c_3_sleep: i2c_3_sleep {
 				drive-strength = <2>;
 				bias-disable;
 			};
@@ -1442,128 +1388,6 @@
 			label = "pri_mi2s_sd0_active";
 			pri_mi2s_sd0_active: pri_mi2s_sd0_active {
 				drive-strength = <2>;	/* 2 mA */
-				bias-disable;		/* NO PULL */
-			};
-		};
-
-		pmx_tert_mi2s {
-			qcom,pins = <&gp 74>, <&gp 75>;
-			qcom,num-grp-pins = <2>;
-			qcom,pin-func = <1>;
-			label = "tert_mi2s";
-			tert_mi2s_sleep: tert_mi2s_sleep {
-				drive-strength = <2>;	/* 2 mA */
-				bias-pull-down;		/* PULL DOWN */
-			};
-			tert_mi2s_active: tert_mi2s_active {
-				drive-strength = <8>;	/* 8 mA */
-				bias-disable;		/* NO PULL */
-				output-high;
-			};
-		};
-
-		pmx_tert_mi2s_mclk {
-			qcom,pins = <&gp 73>;
-			qcom,num-grp-pins = <1>;
-			qcom,pin-func = <1>;
-			label = "tert_mi2s_mclk";
-			tert_mi2s_mclk_sleep: tert_mi2s_mclk_sleep {
-				drive-strength = <2>;	/* 2 mA */
-				bias-pull-down;		/* PULL DOWN */
-			};
-			tert_mi2s_mclk_active: tert_mi2s_mclk_active {
-				drive-strength = <8>;	/* 8 mA */
-				bias-disable;		/* NO PULL */
-			};
-		};
-
-		pmx_tert_mi2s_sd0 {
-			qcom,pins = <&gp 76>;
-			qcom,num-grp-pins = <1>;
-			qcom,pin-func = <1>;
-			label = "tert_mi2s_sd0";
-			tert_mi2s_sd0_sleep: tert_mi2s_sd0_sleep {
-				drive-strength = <2>;	/* 2 mA */
-				bias-pull-down;		/* PULL DOWN */
-			};
-			tert_mi2s_sd0_active: tert_mi2s_sd0_active {
-				drive-strength = <8>;	/* 8 mA */
-				bias-disable;		/* NO PULL */
-			};
-		};
-
-		pmx_tert_mi2s_sd1 {
-			qcom,pins = <&gp 77>;
-			qcom,num-grp-pins = <1>;
-			qcom,pin-func = <1>;
-			label = "tert_mi2s_sd1";
-			tert_mi2s_sd1_sleep: tert_mi2s_sd1_sleep {
-				drive-strength = <2>;	/* 2 mA */
-				bias-pull-down;		/* PULL DOWN */
-			};
-			tert_mi2s_sd1_active: tert_mi2s_sd1_active {
-				drive-strength = <8>;	/* 8 mA */
-				bias-disable;		/* NO PULL */
-			};
-		};
-
-		pmx_quat_mi2s {
-			qcom,pins = <&gp 58>, <&gp 59>;
-			qcom,num-grp-pins = <2>;
-			qcom,pin-func = <1>;
-			label = "quat_mi2s";
-			quat_mi2s_sleep: quat_mi2s_sleep {
-				drive-strength = <2>;	/* 2 mA */
-				bias-pull-down;		/* PULL DOWN */
-			};
-			quat_mi2s_active: quat_mi2s_active {
-				drive-strength = <4>;	/* 4 mA */
-				bias-disable;		/* NO PULL */
-				output-high;
-			};
-		};
-
-		pmx_quat_mi2s_mclk {
-			qcom,pins = <&gp 57>;
-			qcom,num-grp-pins = <1>;
-			qcom,pin-func = <1>;
-			label = "quat_mi2s_mclk";
-			quat_mi2s_mclk_sleep: quat_mi2s_mclk_sleep {
-				drive-strength = <2>;	/* 2 mA */
-				bias-pull-down;		/* PULL DOWN */
-			};
-			quat_mi2s_mclk_active: quat_mi2s_mclk_active {
-				drive-strength = <8>;	/* 8 mA */
-				bias-disable;		/* NO PULL */
-			};
-		};
-
-		pmx_quat_mi2s_sd0 {
-			qcom,pins = <&gp 60>;
-			qcom,num-grp-pins = <1>;
-			qcom,pin-func = <1>;
-			label = "quat_mi2s_sd0";
-			quat_mi2s_sd0_sleep: quat_mi2s_sd0_sleep {
-				drive-strength = <2>;	/* 2 mA */
-				bias-pull-down;		/* PULL DOWN */
-			};
-			quat_mi2s_sd0_active: quat_mi2s_sd0_active {
-				drive-strength = <4>;	/* 4 mA */
-				bias-disable;		/* NO PULL */
-			};
-		};
-
-		pmx_quat_mi2s_sd1 {
-			qcom,pins = <&gp 61>;
-			qcom,num-grp-pins = <1>;
-			qcom,pin-func = <1>;
-			label = "quat_mi2s_sd1";
-			quat_mi2s_sd1_sleep: quat_mi2s_sd1_sleep {
-				drive-strength = <2>;	/* 2 mA */
-				bias-pull-down;		/* PULL DOWN */
-			};
-			quat_mi2s_sd1_active: quat_mi2s_sd1_active {
-				drive-strength = <8>;	/* 8 mA */
 				bias-disable;		/* NO PULL */
 			};
 		};
