--- a/arch/arm/boot/dts/qcom/msm-pm8994.dtsi
+++ b/arch/arm/boot/dts/qcom/msm-pm8994.dtsi
@@ -48,6 +48,8 @@
 					"resin-bark", "kpdpwr-resin-bark";
 			qcom,pon-dbc-delay = <15625>;
 			qcom,system-reset;
+			qcom,store-hard-reset-reason;
+
 			qcom,s3-debounce = <32>;
 			qcom,s3-src = "kpdpwr-and-resin";
 
@@ -56,9 +58,9 @@
 				qcom,pull-up = <1>;
 				linux,code = <116>;
 				qcom,support-reset = <1>;
-				qcom,s1-timer = <10256>;
+				qcom,s1-timer = <4480>;
 				qcom,s2-timer = <2000>;
-				qcom,s2-type = <1>;
+				qcom,s2-type = <7>;
 			};
 
 			qcom,pon_2 {
