--- a/arch/arm/boot/dts/qcom/msm-pmi8994.dtsi
+++ b/arch/arm/boot/dts/qcom/msm-pmi8994.dtsi
@@ -33,6 +33,11 @@
 			qcom,secondary-pon-reset;
 			qcom,s3-debounce = <32>;
 			qcom,s3-src = "kpdpwr-and-resin";
+			pon_perph_reg: qcom,pon_perph_reg {
+				regulator-name = "pon_spare_reg";
+				qcom,pon-spare-reg-addr = <0x8c>;
+				qcom,pon-spare-reg-bit = <1>;
+			};
 		};
 
 		pmi8994_gpios: gpios {
@@ -175,18 +180,6 @@
 			qcom,adc-vdd-reference = <1800>;
 			qcom,vadc-poll-eoc;
 			qcom,vadc-meas-int-mode;
-			qcom,pmic-revid = <&pmi8994_revid>;
-
-			chan@d {
-				label = "chg_temp";
-				reg = <0xd>;
-				qcom,decimation = <0>;
-				qcom,pre-div-channel-scaling = <0>;
-				qcom,calibration-type = "absolute";
-				qcom,scale-function = <16>;
-				qcom,hw-settle-time = <0>;
-				qcom,fast-avg-setup = <0>;
-			};
 		};
 
 		pmi8994_charger: qcom,qpnp-smbcharger {
@@ -209,7 +202,6 @@
 			qcom,parallel-usb-9v-min-current-ma = <900>;
 			qcom,parallel-allowed-lowering-ma = <500>;
 			qcom,autoadjust-vfloat;
-			qcom,pmic-revid = <&pmi8994_revid>;
 
 			qcom,chgr@1000 {
 				reg = <0x1000 0x100>;
@@ -296,7 +288,7 @@
 
 				interrupt-names =	"power-ok",
 							"temp-shutdown",
-							"wdog-timeout",
+							"safety-timeout",
 							"flash-fail",
 							"otst2",
 							"otst3";
@@ -563,6 +555,9 @@
 			qcom,wave-samples = [3e 3e 3e 3e 3e 3e 3e 3e];
 			qcom,wave-rep-cnt = <1>;
 			qcom,wave-samp-rep-cnt = <1>;
+			qcom,lra-high-z = "opt1";
+			qcom,lra-auto-res-mode = "qwd";
+			qcom,lra-res-cal-period = <4>;
 		};
 
 		qcom,leds@d000 {
@@ -620,7 +615,7 @@
 			qcom,pmic-charger-support;
 			qcom,self-check-enabled;
 			qcom,thermal-derate-enabled;
-			qcom,thermal-derate-threshold = <105>;
+			qcom,thermal-derate-threshold = <100>;
 			qcom,thermal-derate-rate = "5_PERCENT";
 			qcom,current-ramp-enabled;
 			qcom,ramp_up_step = "6P7_US";
@@ -631,6 +626,7 @@
 			qcom,headroom-sense-ch0-enabled;
 			qcom,headroom-sense-ch1-enabled;
 			qcom,power-detect-enabled;
+			qcom,duration = <1280>;
 
 			pmi8994_flash0: qcom,flash_0 {
 				label = "flash";
@@ -638,8 +634,7 @@
 				qcom,default-led-trigger =
 						"flash0_trigger";
 				qcom,id = <0>;
-				qcom,duration = <1280>;
-				qcom,current = <625>;
+				qcom,current = <1000>;
 				qcom,max-current = <1000>;
 			};
 
@@ -649,8 +644,7 @@
 				qcom,default-led-trigger =
 						"flash1_trigger";
 				qcom,id = <1>;
-				qcom,duration = <1280>;
-				qcom,current = <625>;
+				qcom,current = <1000>;
 				qcom,max-current = <1000>;
 			};
 
@@ -662,8 +656,6 @@
 				qcom,id = <0>;
 				qcom,current = <120>;
 				qcom,max-current = <200>;
-				boost-supply = <&pmi8994_boostbypass>;
-				boost-voltage-max = <3600000>;
 			};
 
 			pmi8994_torch1: qcom,torch_1 {
@@ -674,21 +666,25 @@
 				qcom,id = <1>;
 				qcom,current = <120>;
 				qcom,max-current = <200>;
-				boost-supply = <&pmi8994_boostbypass>;
-				boost-voltage-max = <3600000>;
 			};
 
 			pmi8994_switch: qcom,switch {
-                                label = "switch";
-                                qcom,led-name = "led:switch";
-                                qcom,default-led-trigger =
-                                                "switch_trigger";
-                                qcom,id = <2>;
+				label = "switch";
+				qcom,led-name = "led:switch";
+				qcom,default-led-trigger =
+						"switch_trigger";
+				qcom,id = <2>;
 				qcom,current = <625>;
 				qcom,max-current = <1000>;
 				qcom,duration = <1280>;
-				boost-supply = <&pmi8994_boostbypass>;
-				boost-voltage-max = <3600000>;
+				reg0 {
+					regulator-name =
+						"pmi8994_boostbypass";
+					max-voltage = <3600000>;
+				};
+				reg1 {
+					regulator-name = "pon_spare_reg";
+				};
                         };
 		};
 	};
