--- a/arch/arm/boot/dts/qcom/msm8994-camera-sensor-mtp.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8994-camera-sensor-mtp.dtsi
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014-2015, The Linux Foundation. All rights reserved.
+ * Copyright (c) 2014, The Linux Foundation. All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -46,6 +46,7 @@
 		qcom,cam-vreg-max-voltage = <2800000>;
 		qcom,cam-vreg-op-mode = <100000>;
 	};
+
 
 	ois0: qcom,ois@0 {
 		cell-index = <0>;
@@ -247,7 +248,7 @@
 		qcom,page0 = <0 0 0 0 0 0>;
 		qcom,poll0 = <0 0 0 0 0 0>;
 		qcom,saddr0 = <0xa0>;
-		qcom,mem0 = <2997 0x00 2 0 1 0>;
+		qcom,mem0 = <2245 0x00 2 0 1 0>;
 
 		cam_vio-supply = <&pm8994_lvs1>;
 		qcom,cam-vreg-name = "cam_vio";
@@ -261,19 +262,72 @@
 		status = "ok";
 	};
 
-	eeprom3: qcom,eeprom@3 {
-		cell-index = <3>;
-		reg = <0x3>;
-		qcom,eeprom-name = "le2464c_master";
+	eeprom4: qcom,eeprom@4 {
+		cell-index = <0>;
+		reg = <0x4>;
+		qcom,eeprom-name = "dw9761b";
 		compatible = "qcom,eeprom";
-		qcom,slave-addr = <0xa0>;
+		qcom,slave-addr = <0xb0>;
+		qcom,cci-master = <0>;
+		qcom,num-blocks = <2>;
+
+		qcom,page0 = <0 0x0 2 0x0 1 0>;
+		qcom,poll0 = <0 0x0 2 0x0 1 0>;
+		qcom,mem0 = <2332 0x0400 2 0 1 0>;
+
+		qcom,page1 = <0 0x0 2 0x0 1 0>;
+		qcom,poll1 = <0 0x0 2 0x0 1 0>;
+		qcom,mem1 = <3 0x0F10 2 0 1 0>;
+
+		cam_vdig-supply = <&pm8994_l27>;
+		cam_vio-supply = <&pm8994_lvs1>;
+		cam_vana-supply = <&pm8994_l17>;
+		cam_vaf-supply = <&pm8994_l23>;
+		qcom,cam-vreg-name = "cam_vdig", "cam_vio", "cam_vana", "cam_vaf";
+		qcom,cam-vreg-min-voltage = <1050000 0 2700000 2800000>;
+		qcom,cam-vreg-max-voltage = <1050000 0 2700000 2800000>;
+		qcom,cam-vreg-op-mode = <105000 0 80000 100000>;
+		qcom,gpio-no-mux = <0>;
+		pinctrl-names = "cam_default", "cam_suspend";
+		pinctrl-0 = <&cam_sensor_mclk0_active &cam_sensor_rear_active>;
+		pinctrl-1 = <&cam_sensor_mclk0_suspend &cam_sensor_rear_suspend>;
+		gpios = <&msm_gpio 13 0>,
+			<&msm_gpio 92 0>,
+			<&msm_gpio 91 0>;
+		qcom,gpio-reset = <1>;
+		qcom,gpio-standby = <2>;
+		qcom,gpio-req-tbl-num = <0 1 2>;
+		qcom,gpio-req-tbl-flags = <1 0 0>;
+		qcom,gpio-req-tbl-label = "CAMIF_MCLK0",
+					  "CAM_RESET0",
+					  "CAM_STANDBY0";
+		qcom,cam-power-seq-type = "sensor_vreg", "sensor_vreg",
+			"sensor_vreg", "sensor_gpio", "sensor_gpio" ,
+			"sensor_clk";
+		qcom,cam-power-seq-val = "cam_vdig", "cam_vana", "cam_vio",
+			"sensor_gpio_reset", "sensor_gpio_standby",
+			"sensor_cam_mclk";
+		qcom,cam-power-seq-cfg-val = <1 1 1 1 1 24000000>;
+		qcom,cam-power-seq-delay = <1 1 1 30 30 5>;
+		status = "ok";
+		clocks = <&clock_mmss clk_mclk0_clk_src>,
+				<&clock_mmss clk_camss_mclk0_clk>;
+		clock-names = "cam_src_clk", "cam_clk";
+	};
+
+	eeprom5: qcom,eeprom@5 {
+		cell-index = <5>;
+		reg = <0x5>;
+		qcom,eeprom-name = "m24c64s";
+		compatible = "qcom,eeprom";
+		qcom,slave-addr = <0xa2>;
 		qcom,cci-master = <0>;
 		qcom,num-blocks = <1>;
 
 		qcom,page0 = <0 0 0 0 0 0>;
 		qcom,poll0 = <0 0 0 0 0 0>;
-		qcom,saddr0 = <0xa0>;
-		qcom,mem0 = <6734 0x0000 2 0 1 0>;
+		qcom,saddr0 = <0xa2>;
+		qcom,mem0 = <2012 0x0000 2 0 1 0>;
 
 		cam_vio-supply = <&pm8994_lvs1>;
 		qcom,cam-vreg-name = "cam_vio";
@@ -294,7 +348,7 @@
 		qcom,csiphy-sd-index = <0>;
 		qcom,csid-sd-index = <0>;
 		qcom,mount-angle = <270>;
-		qcom,eeprom-src = <&eeprom0 &eeprom2 &eeprom3>;
+		qcom,eeprom-src = <&eeprom0 &eeprom2 &eeprom4>;
 		qcom,actuator-src = <&actuator0>;
 		qcom,ois-src = <&ois0>;
 		qcom,led-flash-src = <&led_flash0>;
@@ -399,48 +453,6 @@
 		qcom,sensor-mode = <0>;
 		qcom,cci-master = <0>;
 		status = "ok";
-		clocks = <&clock_mmss clk_mclk2_clk_src>,
-			<&clock_mmss clk_camss_mclk2_clk>;
-		clock-names = "cam_src_clk", "cam_clk";
-	};
-
-qcom,camera@78 {
-		compatible = "ovti,ov2685";
-		reg = <0x78>;
-		qcom,slave-id = <0x78 0x300A 0x2685>;
-		qcom,csiphy-sd-index = <2>;
-		qcom,csid-sd-index = <2>;
-		qcom,mount-angle = <0>;
-		qcom,sensor-name = "ov2685";
-		cam_vdig-supply = <&pm8994_l3>;
-		cam_vio-supply = <&pm8994_lvs1>;
-		cam_vana-supply = <&pm8994_l29>;
-		qcom,cam-vreg-name = "cam_vdig", "cam_vio", "cam_vana";
-		qcom,cam-vreg-min-voltage = <1200000 0 2800000>;
-		qcom,cam-vreg-max-voltage = <1200000 0 2800000>;
-		qcom,cam-vreg-op-mode = <105000 0 80000>;
-		qcom,gpio-no-mux = <0>;
-		pinctrl-names = "cam_default", "cam_suspend";
-		pinctrl-0 = <&cam_sensor_mclk2_active &cam_sensor_front_active>;
-		pinctrl-1 = <&cam_sensor_mclk2_suspend &cam_sensor_front_suspend>;
-		gpios = <&msm_gpio 15 0>,
-			<&msm_gpio 104 0>,
-			<&msm_gpio 105 0>;
-		qcom,gpio-reset = <1>;
-		qcom,gpio-standby = <2>;
-		qcom,gpio-req-tbl-num = <0 1 2>;
-		qcom,gpio-req-tbl-flags = <1 0 0>;
-		qcom,gpio-req-tbl-label = "CAMIF_MCLK2",
-			"CAM_RESET2",
-			"CAM_STANDBY2";
-		qcom,gpio-set-tbl-num = <1 1>;
-		qcom,gpio-set-tbl-flags = <0 2>;
-		qcom,gpio-set-tbl-delay = <1000 30000>;
-		qcom,csi-lane-assign = <0x4320>;
-		qcom,csi-lane-mask = <0x3>;
-		qcom,sensor-position = <0x100>;
-		qcom,sensor-mode = <1>;
-		qcom,cci-master = <0>;
 		clocks = <&clock_mmss clk_mclk2_clk_src>,
 			<&clock_mmss clk_camss_mclk2_clk>;
 		clock-names = "cam_src_clk", "cam_clk";
