--- a/arch/arm/boot/dts/qcom/msm8994-camera.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8994-camera.dtsi
@@ -237,107 +237,51 @@
 			"-2", "0", "0";
 	};
 
-	qcom,vfe {
-		compatible = "qcom,vfe";
-		#address-cells = <1>;
-		#size-cells = <1>;
-		ranges;
+	vfe0: qcom,vfe@fda10000 {
+		cell-index = <0>;
+		compatible = "qcom,vfe46";
+		reg = <0xfda10000 0x1000>,
+			<0xfda40000 0x200>;
+		reg-names = "vfe", "vfe_vbif";
+		interrupts = <0 57 0>;
+		interrupt-names = "vfe";
+		vdd-supply = <&gdsc_vfe>;
+		clocks = <&clock_mmss clk_camss_top_ahb_clk>,
+			<&clock_mmss clk_camss_ahb_clk>,
+			<&clock_mmss clk_vfe0_clk_src>,
+			<&clock_mmss clk_camss_vfe_vfe0_clk>,
+			<&clock_mmss clk_camss_csi_vfe0_clk>,
+			<&clock_mmss clk_camss_vfe_vfe_ahb_clk>,
+			<&clock_mmss clk_camss_vfe_vfe_axi_clk>;
+		clock-names = "camss_top_ahb_clk" , "camss_ahb_clk",
+			"vfe_clk_src", "camss_vfe_vfe_clk", "camss_csi_vfe_clk",
+			"iface_clk", "bus_clk";
+		qcom,clock-rates = <0 0 320000000 0 0 0 0>;
 
-		vfe0: qcom,vfe0@fda10000 {
-			cell-index = <0>;
-			compatible = "qcom,vfe46";
-			#address-cells = <1>;
-			#size-cells = <1>;
-			reg = <0xfda10000 0x1000>,
-				<0xfda40000 0x200>;
-			reg-names = "vfe", "vfe_vbif";
-			interrupts = <0 57 0>;
-			interrupt-names = "vfe";
-			vdd-supply = <&gdsc_vfe>;
-			clocks = <&clock_mmss clk_camss_top_ahb_clk>,
-				<&clock_mmss clk_camss_ahb_clk>,
-				<&clock_mmss clk_vfe0_clk_src>,
-				<&clock_mmss clk_camss_vfe_vfe0_clk>,
-				<&clock_mmss clk_camss_csi_vfe0_clk>,
-				<&clock_mmss clk_camss_vfe_vfe_ahb_clk>,
-				<&clock_mmss clk_camss_vfe_vfe_axi_clk>;
-			clock-names = "camss_top_ahb_clk" , "camss_ahb_clk",
-				"vfe_clk_src", "camss_vfe_vfe_clk", "camss_csi_vfe_clk",
-				"iface_clk", "bus_clk";
-			qcom,clock-rates = <0 0 320000000 0 0 0 0>;
-
-		};
-
-		vfe1: qcom,vfe1@fda14000 {
-			cell-index = <1>;
-			compatible = "qcom,vfe46";
-			#address-cells = <1>;
-			#size-cells = <1>;
-			reg = <0xfda14000 0x1000>,
-				<0xfda40000 0x200>;
-			reg-names = "vfe", "vfe_vbif";
-			interrupts = <0 58 0>;
-			interrupt-names = "vfe";
-			vdd-supply = <&gdsc_vfe>;
-			clocks = <&clock_mmss clk_camss_top_ahb_clk>,
-				<&clock_mmss clk_camss_ahb_clk>,
-				<&clock_mmss clk_vfe1_clk_src>,
-				<&clock_mmss clk_camss_vfe_vfe1_clk>,
-				<&clock_mmss clk_camss_csi_vfe1_clk>,
-				<&clock_mmss clk_camss_vfe_vfe_ahb_clk>,
-				<&clock_mmss clk_camss_vfe_vfe_axi_clk>;
-			clock-names = "camss_top_ahb_clk" , "camss_ahb_clk",
-				"vfe_clk_src", "camss_vfe_vfe_clk", "camss_csi_vfe_clk",
-				"iface_clk", "bus_clk";
-			qcom,clock-rates = <0 0 320000000 0 0 0 0>;
-		};
 	};
 
-	qcom,cam_smmu {
-		compatible = "qcom,msm-cam-smmu";
-		msm_cam_smmu_cb1: msm_cam_smmu_cb1 {
-			compatible = "qcom,qsmmu-cam-cb";
-			iommus = <&vfe_iommu 0>,
-					<&vfe_iommu 1>;
-			label = "vfe";
-		};
-
-		msm_cam_smmu_cb2: msm_cam_smmu_cb2 {
-			compatible = "qcom,qsmmu-cam-cb";
-			label = "vfe_secure";
-			qcom,secure-context;
-		};
-
-		msm_cam_smmu_cb3: msm_cam_smmu_cb3 {
-			compatible = "qcom,qsmmu-cam-cb";
-			iommus = <&cpp_iommu 2>;
-			label = "cpp_0";
-		};
-
-		msm_cam_smmu_cb4: msm_cam_smmu_cb4 {
-			compatible = "qcom,qsmmu-cam-cb";
-			iommus = <&fd_iommu 0>;
-			label = "camera_fd";
-		};
-
-		msm_cam_smmu_cb5: msm_cam_smmu_cb5 {
-			compatible = "qcom,qsmmu-cam-cb";
-			iommus = <&jpeg_iommu 0>;
-			label = "jpeg_enc0";
-		};
-
-		msm_cam_smmu_cb6: msm_cam_smmu_cb6 {
-			compatible = "qcom,qsmmu-cam-cb";
-			iommus = <&jpeg_iommu 1>;
-			label = "jpeg_enc1";
-		};
-
-		msm_cam_smmu_cb7: msm_cam_smmu_cb7 {
-			compatible = "qcom,qsmmu-cam-cb";
-			iommus = <&jpeg_iommu 2>;
-			label = "jpeg_dec";
-		};
+	vfe1: qcom,vfe@fda14000 {
+		cell-index = <1>;
+		compatible = "qcom,vfe46";
+		reg = <0xfda14000 0x1000>,
+			<0xfda40000 0x200>;
+		reg-names = "vfe", "vfe_vbif";
+		interrupts = <0 58 0>;
+		interrupt-names = "vfe";
+		vdd-supply = <&gdsc_vfe>;
+		clocks = <&clock_mmss clk_camss_top_ahb_clk>,
+			<&clock_mmss clk_camss_ahb_clk>,
+			<&clock_mmss clk_vfe1_clk_src>,
+			<&clock_mmss clk_camss_vfe_vfe1_clk>,
+			<&clock_mmss clk_camss_csi_vfe1_clk>,
+			<&clock_mmss clk_camss_vfe_vfe_ahb_clk>,
+			<&clock_mmss clk_camss_vfe_vfe_axi_clk>;
+		clock-names = "camss_top_ahb_clk" , "camss_ahb_clk",
+			"vfe_clk_src", "camss_vfe_vfe_clk", "camss_csi_vfe_clk",
+			"iface_clk", "bus_clk";
+		qcom,clock-rates = <0 0 320000000 0 0 0 0>;
 	};
+
 
 	qcom,jpeg@fda1c000 {
 		cell-index = <0>;
@@ -356,8 +300,6 @@
 			<&clock_mmss clk_camss_top_ahb_clk>,
 			<&clock_mmss clk_camss_ahb_clk>;
 		qcom,clock-rates = <320000000 0 0 0 0>;
-		vbif-reg-settings = <0x4 0x1>;
-		qos-reg-settings = <0x28 0x00000008>;
 	};
 
 	qcom,jpeg@fda20000 {
@@ -376,8 +318,6 @@
 		       <&clock_mmss clk_camss_top_ahb_clk>,
 		       <&clock_mmss clk_camss_ahb_clk>;
 		qcom,clock-rates = <320000000 0 0 0 0>;
-		vbif-reg-settings = <0x4 0x1>;
-		qos-reg-settings = <0x28 0x00000008>;
 	};
 
 	qcom,jpeg@fda24000 {
@@ -396,8 +336,6 @@
 		       <&clock_mmss clk_camss_top_ahb_clk>,
 		       <&clock_mmss clk_camss_ahb_clk>;
 		qcom,clock-rates = <266670000 0 0 0 0>;
-		vbif-reg-settings = <0x4 0x1>;
-		qos-reg-settings = <0x28 0x00000008>;
 	};
 
 	qcom,jpeg@fdaa0000 {
@@ -416,7 +354,6 @@
 			<&clock_mmss clk_camss_top_ahb_clk>,
 			<&clock_mmss clk_camss_ahb_clk>;
 		qcom,clock-rates = <266670000 0 0 0 0>;
-		vbif-reg-settings = <0x4 0x1>;
 	};
 
 
@@ -449,18 +386,6 @@
 			"camss_vfe_cpp_clk","micro_iface_clk", "camss_ahb_clk";
 		qcom,clock-rates = <0 465000000 0 0 465000000 0 0>;
 		qcom,min-clock-rate = <320000000>;
-		qcom,cpp-fw-payload-info {
-			qcom,stripe-base = <493>;
-			qcom,plane-base = <478>;
-			qcom,stripe-size = <48>;
-			qcom,plane-size = <5>;
-			qcom,fe-ptr-off = <8>;
-			qcom,we-ptr-off = <20>;
-			qcom,ref-fe-ptr-off = <14>;
-			qcom,ref-we-ptr-off = <30>;
-			qcom,set-group-buffer-len = <69>;
-			qcom,dup-frame-indicator-off = <37>;
-		};
 	};
 
 	qcom,fd@fd878000 {
@@ -482,9 +407,6 @@
 		clock-rates = <60000000 60000000 75000000 40000000>,
 				<200000000 200000000 150000000 40000000>,
 				<400000000 400000000 333000000 80000000>;
-		bus-bandwidth-vectors = <13000000 13000000>,
-					<45000000 45000000>,
-					<90000000 90000000>;
 	};
 
 	cci: qcom,cci@fda0c000 {
