--- a/arch/arm64/Makefile
+++ b/arch/arm64/Makefile
@@ -53,16 +53,8 @@ libs-y		+= $(LIBGCC)
 # Default target when executing plain make
 ifeq ($(CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE),y)
 KBUILD_IMAGE	:= Image.gz-dtb
-# Generate uncompressed variant as secondary image
-ifeq ($(CONFIG_BUILD_ARM64_UNCOMPRESSED_APPENDED_DTB_IMAGE),y)
-KBUILD_IMAGE	+= Image-dtb
-endif
-else
-ifeq ($(CONFIG_BUILD_ARM64_UNCOMPRESSED_APPENDED_DTB_IMAGE),y)
-KBUILD_IMAGE	:= Image-dtb
 else
 KBUILD_IMAGE	:= Image.gz
-endif
 endif
 
 KBUILD_DTBS	:= dtbs
@@ -89,7 +81,7 @@ PHONY += vdso_install
 vdso_install:
 	$(Q)$(MAKE) $(build)=arch/arm64/kernel/vdso $@
 
-Image-dtb Image.gz-dtb: vmlinux scripts dtbs
+Image.gz-dtb: vmlinux scripts dtbs
 	$(Q)$(MAKE) $(build)=$(boot) $(boot)/$@
 
 # We use MRPROPER_FILES and CLEAN_FILES now
