fs/dyn_sync_cntrl: dynamic sync control 2.0 for msm8994
While screen is on, file sync is suspended.
When screen is off, a file sync is called to flush all outstanding writes
and restore file sync operation as normal.

By andip71 (aka Lord Boeffla)

Credits for original implementation and concept to Faux123
Conflicts:
	fs/Kconfig
	fs/Makefile
	fs/sync.c

--- a/fs/Kconfig
+++ b/fs/Kconfig
@@ -273,4 +273,10 @@ endif # NETWORK_FILESYSTEMS
 source "fs/nls/Kconfig"
 source "fs/dlm/Kconfig"
 
+config DYNAMIC_FSYNC
+	default n
+	bool "dynamic file sync control"
+	help
+	  An experimental file sync control using new power_suspend driver
+
 endmenu
